<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:id="@+id/titleApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_margin="15dp"/>
    <TextView
        android:id="@+id/profileName"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/name"
        android:layout_below="@id/titleApp"/>
    <Button
        android:id="@+id/statistics_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/statistics"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="80dp"
        android:layout_below="@id/profileName"/>
    <TextView
        android:id="@+id/profileSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="28sp"
        android:layout_margin="7dp"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/profileAppearance"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appearance"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/profileSettings"/>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/profileNightModeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/night_mode"
        android:textColor="@color/colorAccent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="7dp"
        android:layout_below="@id/profileAppearance"/>
    <TextView
        android:id="@+id/listSettings"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listSettings"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/profileNightModeSwitch"/>
    <CheckBox
        android:id="@+id/checkboxWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingWeather"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/listSettings"/>
    <CheckBox
        android:id="@+id/checkboxMood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingMood"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/checkboxWeather"/>
    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/about"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_above="@id/helpButton"/>
    <Button
        android:id="@+id/helpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/help_and_support"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>