<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAdvanced">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">


        <!--  TOP APP BAR  -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/topAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/menu_sort"
                style="@style/BottomAppBar"
                app:titleTextColor="@color/colorAccent"
                android:background="@color/colorPrimary">
                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:contentDescription="@string/back"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memories"
                    android:textSize="26sp"
                    android:paddingStart="95dp"
                    android:textColor="@color/colorAccent"/>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>


        <TextView
            android:id="@+id/no_results_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topAppBarLayout"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:textSize="24sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memory_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:layout_below="@+id/topAppBarLayout"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            app:borderWidth="0dp"
            android:backgroundTint="@color/colorAccent"/>
    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/left_drawer"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:background="@color/colorPrimary"
        app:itemTextColor="@color/drawer_text_selector"
        app:itemIconTint="@color/colorAccent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/colorPrimaryDark"
                android:shadowDy="5"
                android:shadowColor="@color/colorAdvanced"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingStart="16dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_sort_24"
                    android:layout_gravity="center_vertical"
                    android:paddingEnd="8dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sort"
                    android:layout_gravity="center_vertical"
                    android:textSize="18sp"/>
            </LinearLayout>
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="16dp">
                <RadioButton
                    android:id="@+id/radio_button_newest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sortNewest"
                    android:textColor="@color/drawer_text_selector"
                    android:buttonTint="@color/drawer_background_selector"
                    android:saveEnabled="false"/>
                <RadioButton
                    android:id="@+id/radio_button_oldest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sortOldest"
                    android:textColor="@color/drawer_text_selector"
                    android:buttonTint="@color/drawer_background_selector"/>
            </RadioGroup>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
<!--    app:itemBackground="@color/drawer_background_selector"-->
<!--    app:itemTextColor="@color/drawer_text_selector"-->