<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/titleApp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/daykeeper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todayDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleApp"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/titleApp" />

    <RelativeLayout
        android:id="@+id/search_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/todayDate">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldSearch"
            style="@style/AppTheme.TextLayout"
            app:boxBackgroundColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:hint="@string/search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldSearchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:lines="1"
                android:textColor="@color/colorAccent" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/button_search_drawable"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/textFieldSearch"
            android:layout_alignEnd="@id/textFieldSearch"
            android:layout_alignBottom="@id/textFieldSearch"
            android:background="@drawable/search_button"
            android:src="@drawable/ic_baseline_search_24"
            android:translationZ="10dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/all_memories_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_relative_layout"
        android:layout_margin="3dp"
        android:background="@drawable/button_bg"
        android:text="@string/all_memories_view"
        app:layout_constraintTop_toBottomOf="@+id/search_relative_layout" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/todayDate"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            style="@style/BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:elevation="5dp"
            android:background="@drawable/button_bg"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="7dp"
            app:fabCradleRoundedCornerRadius="7dp"
            app:menu="@menu/bottom_menu">
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_baseline_add_24"
            app:borderWidth="0dp"
            app:layout_anchor="@id/bottom_app_bar" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>