<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--  TOP APP BAR  -->
            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/topAppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/BottomAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/colorPrimary"
                    app:navigationContentDescription="@string/back">

                    <ImageView
                        android:id="@+id/backButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/back"
                        android:src="@drawable/ic_baseline_arrow_back_24" />
                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>
            <ImageView
                android:id="@+id/memory_button_image_drawable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintWidth_max="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/memory_button_image"
                app:layout_constraintEnd_toEndOf="@+id/memory_button_image"
                app:layout_constraintStart_toStartOf="@+id/memory_button_image"
                app:layout_constraintTop_toTopOf="@+id/memory_button_image"
                app:srcCompat="@drawable/ic_baseline_image_24" />

            <ImageView
                android:id="@+id/memory_button_weather_drawable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintWidth_max="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/memory_button_weather"
                app:layout_constraintEnd_toEndOf="@+id/memory_button_weather"
                app:layout_constraintStart_toStartOf="@+id/memory_button_weather"
                app:layout_constraintTop_toTopOf="@+id/memory_button_weather"
                app:srcCompat="@drawable/ic_baseline_cloud_24" />

            <ImageView
                android:id="@+id/memory_button_mood_drawable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintWidth_max="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/memory_button_mood"
                app:layout_constraintEnd_toEndOf="@+id/memory_button_mood"
                app:layout_constraintStart_toStartOf="@+id/memory_button_mood"
                app:layout_constraintTop_toTopOf="@+id/memory_button_mood"
                app:srcCompat="@drawable/ic_baseline_emoji_emotions_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldTitle"
                style="@style/AppTheme.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/memory_title"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topAppBarLayout"
                app:startIconContentDescription="@string/memory_icon_book"
                app:startIconDrawable="@drawable/ic_baseline_menu_book_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/colorTextGrey" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldStory"
                style="@style/AppTheme.TextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/memory_text"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextStory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="text|textMultiLine"
                    android:lines="5"
                    android:maxLines="15"
                    android:textColor="@color/colorTextGrey" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/memoryChangeDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/memoryChangeGps"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldStory" />

            <TextView
                android:id="@+id/memoryChangeGps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text=""
                app:layout_constraintEnd_toStartOf="@+id/memoryChangeTime"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/memoryChangeDate"
                app:layout_constraintTop_toBottomOf="@+id/textFieldStory" />

            <TextView
                android:id="@+id/memoryChangeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/memoryChangeGps"
                app:layout_constraintTop_toBottomOf="@+id/textFieldStory" />

            <ImageView
                android:id="@+id/memory_image_camera"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:elevation="10dp"
                android:background="@color/colorPrimary"
                app:layout_constrainedHeight="true"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memory_button_mood"
                app:layout_constraintWidth_max="300dp" />

            <Button
                android:id="@+id/memory_button_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toStartOf="@+id/memory_button_mood"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memoryChangeGps" />

            <Button
                android:id="@+id/memory_button_mood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@+id/memory_button_image"
                app:layout_constraintEnd_toStartOf="@+id/memory_button_weather"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/memory_button_image"
                app:layout_constraintTop_toTopOf="@+id/memory_button_image" />

            <Button
                android:id="@+id/memory_button_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintBottom_toBottomOf="@+id/memory_button_mood"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/memory_button_mood"
                app:layout_constraintTop_toTopOf="@+id/memory_button_mood" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:padding="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start">

                    <Button
                        android:id="@+id/deleteMemoryButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_delete_24"
                        android:translationZ="10dp"
                        app:tint="@color/colorError" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="15dp">

                    <Button
                        android:id="@+id/saveMemoryButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_check_24"
                        android:translationZ="10dp"
                        app:tint="@color/colorAccept" />
                </RelativeLayout>
            </FrameLayout>
        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>